# magic_enum

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: options.cmake
example/: CMakeLists.txt
test/: CMakeLists.txt
